--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,8 @@ services:
       - RUSTCHAT_S3_REGION=us-east-1
       - RUSTCHAT_JWT_SECRET=dev_secret_key_change_me_in_prod
       - RUSTCHAT_ENCRYPTION_KEY=your-super-secret-encryption-key-32chars!!
+      - RUSTCHAT_ADMIN_USER=admin@rustchat.io
+      - RUSTCHAT_ADMIN_PASSWORD=Password33
       - RUST_LOG=debug
     ports:
       - "3000:3000"
