--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -18,6 +18,7 @@ tower-http = { version = "0.6", features = ["cors", "trace", "request-id", "comp
 
 # Database
 sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
+redis = { version = "0.27", features = ["tokio-comp", "json"] }
 
 # Serialization
 serde = { version = "1.0", features = ["derive"] }
