--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -19,6 +19,25 @@ server {
     }
 
     # Explicit routing for Mattermost API v4 compatibility
+    location = /api/v4/users/login {
+        proxy_pass http://backend:3000/api/v4/users/login;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        proxy_set_header Sec-WebSocket-Protocol $http_sec_websocket_protocol;
+        proxy_cache_bypass $http_upgrade;
+
+        set $auth_token $upstream_http_token;
+        proxy_hide_header token;
+        add_header Token $auth_token always;
+        add_header Access-Control-Expose-Headers "Token" always;
+    }
+
     location ^~ /api/v4/ {
         proxy_pass http://backend:3000/api/v4/;
         proxy_http_version 1.1;
