--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -25,6 +25,7 @@ deadpool-redis = "0.19"
 # Serialization
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+serde_urlencoded = "0.7"
 
 # Configuration
 config = "0.14"
