--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -7,6 +7,8 @@ server {
     listen 80;
     server_name localhost;
 
+    client_max_body_size 50m;
+
     root /usr/share/nginx/html;
     index index.html;
 
@@ -73,6 +75,21 @@ server {
         }
     }
 
+    # File uploads (disable buffering, allow larger bodies)
+    location = /api/v1/files {
+        proxy_pass http://backend:3000/api/v1/files;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        proxy_request_buffering off;
+        proxy_buffering off;
+        proxy_read_timeout 300s;
+        proxy_send_timeout 300s;
+    }
+
     # Legacy or other API paths
     location /api/ {
         proxy_pass http://backend:3000/api/;
@@ -83,4 +100,3 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
-
