--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - RUSTCHAT_JWT_SECRET=${RUSTCHAT_JWT_SECRET:-super-secret-key-change-me}
       - RUSTCHAT_ENCRYPTION_KEY=${RUSTCHAT_ENCRYPTION_KEY:-another-secret-key-32chars-long!}
       - RUSTCHAT_S3_ENDPOINT=http://rustfs:9000
+      - RUSTCHAT_S3_PUBLIC_ENDPOINT=https://s3.rustchat.io
       - RUSTCHAT_S3_BUCKET=rustchat-uploads
       - RUSTCHAT_S3_ACCESS_KEY=minioadmin
       - RUSTCHAT_S3_SECRET_KEY=minioadmin
