--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -5,6 +5,10 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
+    # Connection timeout settings to prevent frequent disconnections
+    keepalive_timeout 75s;
+    keepalive_requests 1000;
+
     # Logging configuration for debugging
     access_log /var/log/nginx/access.log combined;
     error_log /var/log/nginx/error.log debug;
@@ -27,6 +31,15 @@ server {
         # Important for WebSocket protocol fallback
         proxy_set_header Sec-WebSocket-Protocol $http_sec_websocket_protocol;
 
+        # WebSocket timeout settings - prevent frequent disconnections
+        proxy_read_timeout 86400s;      # 24 hours - allow long-lived WebSocket connections
+        proxy_send_timeout 86400s;      # 24 hours
+        proxy_connect_timeout 60s;      # Connection timeout
+
+        # Disable buffering for WebSocket connections
+        proxy_buffering off;
+        proxy_request_buffering off;
+
         # Disable caching for API
         proxy_cache_bypass $http_upgrade;
     }
@@ -44,6 +57,15 @@ server {
 
         # Important for WebSocket protocol fallback
         proxy_set_header Sec-WebSocket-Protocol $http_sec_websocket_protocol;
+
+        # WebSocket timeout settings - prevent frequent disconnections
+        proxy_read_timeout 86400s;      # 24 hours - allow long-lived WebSocket connections
+        proxy_send_timeout 86400s;      # 24 hours
+        proxy_connect_timeout 60s;      # Connection timeout
+
+        # Disable buffering for WebSocket connections
+        proxy_buffering off;
+        proxy_request_buffering off;
 
         # Disable caching for API
         proxy_cache_bypass $http_upgrade;
