--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -9,6 +9,10 @@ server {
 
     client_max_body_size 50m;
 
+    # Connection timeout settings to prevent frequent disconnections
+    keepalive_timeout 75s;
+    keepalive_requests 1000;
+
     root /usr/share/nginx/html;
     index index.html;
 
@@ -63,6 +67,15 @@ server {
         # Mattermost WS protocol compatibility
         proxy_set_header Sec-WebSocket-Protocol $http_sec_websocket_protocol;
         proxy_cache_bypass $http_upgrade;
+
+        # WebSocket timeout settings - prevent frequent disconnections
+        proxy_read_timeout 86400s;      # 24 hours - allow long-lived WebSocket connections
+        proxy_send_timeout 86400s;      # 24 hours
+        proxy_connect_timeout 60s;      # Connection timeout
+
+        # Disable buffering for WebSocket connections
+        proxy_buffering off;
+        proxy_request_buffering off;
 
         # Ensure standard API calls also expose the Token if returned elsewhere
         header_filter_by_lua_block {
