--- a/.gitignore
+++ b/.gitignore
@@ -29,9 +29,13 @@ Thumbs.db
 *.log
 logs/
 
+# mattermost
+mattermost-mobile
+
 # Test coverage
 *.gcno
 *.gcda
 coverage/
 
 # Cargo
+backend/Cargo.lock
